<resources>

    <string name="app_name">MindTrips</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="flight_status">Flights</string>
    <string name="ratings">Ratings</string>
    <string name='home'>Home</string>
    <string name="recomend">Would you recommend us?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="airline">Airline</string>
    <string name="send_review">Send Review</string>
    <string name="comments">Insert your comments</string>
    <string name="friendliness">Friendliness</string>
    <string name="food">Food</string>
    <string name="comfort">Comfort</string>
    <string name="qualityprice">Quality vs Price</string>
    <string name="punctuality">Punctuality</string>
    <string name="mileage">Mileage</string>
    <string name="review">Review</string>
    <string name="flight">Save Flight</string>
    <string name="airline1">Airline:</string>
    <string name="flight_id">Flight ID:</string>
    <string name="departure">Departure</string>
    <string name="airport">Airport:</string>
    <string name="placeholder">Flight Data</string>
    <string name="gatetime">Scheduled Gate Time:</string>
    <string name="expgatetime">Expected Gate Time:</string>
    <string name="gate">Gate:</string>
    <string name="termina">Terminal:</string>
    <string name="tofftime">Takeoff Time:</string>
    <string name="airport_or_city">Airport or City</string>
    <string name="arrival">Arrival</string>
	<string name="sent">Comment Sent!</string>
	<string name="status">Status: </string>
	<string name="planificated">Planification</string>
    <string name="active">Active</string>
    <string name="deflected">Deflected</string>
    <string name="canceled">Canceled</string>
    <string name="saved">Flight Saved!</string>
    <string name="changed">Flight Changed!</string>
    <string name="baggage">Baggage Gate:</string>
    <string name="landed">Landed</string>
    <string name="cityerror">The city is not valid</string>
    
</resources>