<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RatingBar
        android:id="@+id/friendlinessRating"
        style="@style/starRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginRight="42dp"
        android:layout_marginTop="40dp"
        android:numStars="4" />

    <TextView
        android:id="@+id/airlineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/airline"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/foodRating"
        style="@style/starRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendlinessRating"
        android:layout_alignTop="@+id/textView2"
        android:layout_below="@+id/friendlinessRating"
        android:numStars="4" />

    <RatingBar
        android:id="@+id/comfortRating"
        style="@style/starRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/foodRating"
        android:layout_alignTop="@+id/textView3"
        android:layout_below="@+id/foodRating"
        android:numStars="4" />

    <RatingBar
        android:id="@+id/qualityPriceRating"
        style="@style/starRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/comfortRating"
        android:layout_alignTop="@+id/textView4"
        android:layout_below="@+id/comfortRating"
        android:numStars="4" />

    <RatingBar
        android:id="@+id/punctualityRating"
        style="@style/starRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qualityPriceRating"
        android:layout_alignTop="@+id/textView5"
        android:layout_below="@+id/qualityPriceRating"
        android:numStars="4" />

    <RatingBar
        android:id="@+id/mileageProgramRating"
        style="@style/starRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/punctualityRating"
        android:layout_alignTop="@+id/textView6"
        android:layout_below="@+id/punctualityRating"
        android:numStars="4" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/airlineName"
        android:text="@string/friendliness"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/food"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/comfort"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/qualityprice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:text="@string/punctuality"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:text="@string/mileage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/send_review" />

    <Switch
        android:id="@+id/recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mileageProgramRating"
        android:layout_marginTop="28dp"
        android:checked="true"
        android:text="@string/recomend"
        android:textOff="@string/no"
        android:textOn="@string/yes" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/recommend"
        android:ems="10"
        android:hint="@string/comments"
        android:inputType="textMultiLine"
        android:maxLines="5" >

        <requestFocus />
    </EditText>

</RelativeLayout>