<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/searchbar"
        android:actionViewClass="android.widget.SearchView"
        android:menuCategory="container"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="Search"
        android:visible="true"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/flight_status"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
        android:title="@string/flight_status">
    </item>
    <item
        android:id="@+id/ratings"
        android:orderInCategory="97"
        android:showAsAction="ifRoom"
        android:title="@string/ratings">
    </item>
</menu>